--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title></title>
+    <h1>1111111</h1>
     <script src="js/mui.min.js"></script>
+    <script src="js/zepto.js"></script>
     <link href="css/mui.min.css" rel="stylesheet"/>
+    <script src="js/vconsole.min.js"></script>
+    <script>
+    	var vConsole = new VConsole();
+    </script>
     <script type="text/javascript" charset="utf-8">
+    
       	mui.init();
+      	$('h1').on('tap',function(){
+      		
+      		console.log({data:111,type:2221})
+      	})
     </script>
 </head>
 <body>
