--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
       	mui.init();
       	$('h1').on('tap',function(){
       		
-      		console.log({data:111,type:2221})
+      console.log({data:111,type:2221})
+      console.log(12138)
       	})
     </script>
 </head>
