--- a/app/index.html
+++ b/app/index.html
@@ -2,76 +2,75 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title></title>
+	<link href="css/mui.min.css" rel="stylesheet" />
+	<link href="css/lylcss.css" rel="stylesheet" />
     <!--<h1>1111111</h1>-->
-    
-   <!doctype html>
-<html>
-
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="css/mui.min.css" rel="stylesheet" />
-	</head>
-
-	<body>
-		<!-- 主界面菜单同时移动 -->
-		    <!-- 侧滑导航根容器 -->
-		    <div class="mui-off-canvas-wrap mui-draggable">
-		        <!-- 主页面容器 -->
-		        <div class="mui-inner-wrap">
-		            <!-- 菜单容器 -->
-		            <!-- 主页面标题 -->
-		            <header class="mui-bar mui-bar-nav">
-		                <!--<a class="mui-icon mui-action-menu mui-icon-bars mui-pull-left" href="#offCanvasSide"></a>-->
-		                <h1 class="mui-title" id="wowo">....</h1>
-		                <!--<span class="mui-icon mui-icon-plus" id="oo"></span>-->
-		                <span class=" mui-icon mui-icon-search" id="ww"></span>
-		            </header>
-		            <nav class="mui-bar mui-bar-tab">
-		    		    <a class="mui-tab-item mui-active hehe">
-		    		        <span class="mui-icon mui-icon mui-icon-weixin"></span>
-		    		        <span class="mui-tab-label ">外卖</span>
-		    		    </a>
-		    		    <a class="mui-tab-item hehe">
-		    		        <span class="mui-icon mui-icon mui-icon mui-icon-personadd"></span>
-		    		        <span class="mui-tab-label ">搜索</span>
-		    		    </a>
-		    		    <a class="mui-tab-item hehe">
-		    		        <span class="mui-icon mui-icon mui-icon-navigate"></span>
-		    		        <span class="mui-tab-label ">订单</span>
-		    		    </a>
-		    		    <a class="mui-tab-item hehe">
-		    		        <span class="mui-icon mui-icon mui-icon-contact"></span>
-		    		        <span class="mui-tab-label ">我的</span>
-		    		    </a>
-		    		</nav>
-		            <!-- 主页面内容容器 -->
-		            <div class="mui-content mui-scroll-wrapper">
-		                <div class="mui-scroll">
-		                    <!-- 主界面具体展示内容 -->
-		                    <div class="neir">111</div>
-		                    <div class="neir" style="display: none;">222</div>
-		                    <div class="neir" style="display: none;">333</div>
-		                    <div class="neir" style="display: none;">444</div>
-		                </div>
-		            </div>
-		       	 <div class="mui-off-canvas-backdrop"></div>
-		        </div>
-		    </div>
-</body>
-</html>
+</head>
+<body>
+	<!-- 主界面菜单同时移动 -->
+		<!-- 侧滑导航根容器 -->
+		<div class="mui-off-canvas-wrap mui-draggable">
+			<!-- 主页面容器 -->
+			<div class="mui-inner-wrap">
+				<!-- 菜单容器 -->
+				<!-- 主页面标题 -->
+				<header class="mui-bar mui-bar-nav">
+					<!--<a class="mui-icon mui-action-menu mui-icon-bars mui-pull-left" href="#offCanvasSide"></a>-->
+					<h1 class="mui-title" id="wowo">....</h1>
+					<!--<span class="mui-icon mui-icon-plus" id="oo"></span>-->
+					<span class=" mui-icon mui-icon-search" id="ww"></span>
+				</header>
+				<nav class="mui-bar mui-bar-tab">
+					<a class="mui-tab-item mui-active hehe">
+						<span class="mui-icon mui-icon mui-icon-weixin"></span>
+						<span class="mui-tab-label ">外卖</span>
+					</a>
+					<a class="mui-tab-item hehe">
+						<span class="mui-icon mui-icon mui-icon mui-icon-personadd"></span>
+						<span class="mui-tab-label ">搜索</span>
+					</a>
+					<a class="mui-tab-item hehe">
+						<span class="mui-icon mui-icon mui-icon-navigate"></span>
+						<span class="mui-tab-label ">订单</span>
+					</a>
+					<a class="mui-tab-item hehe">
+						<span class="mui-icon mui-icon mui-icon-contact"></span>
+						<span class="mui-tab-label ">我的</span>
+					</a>
+				</nav>
+				<!-- 主页面内容容器 -->
+				<div class="mui-content mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<!-- 主界面具体展示内容 -->
+						<div class="neir container-lyl">
+							<div class="content-lyl">
+								<ul class="toubu-lyl">
+								</ul>
+								<span class="nav-lunbo nav-style"></span>
+								<span class="nav-lunbo"></span>
+							</div>
+							<div class="end-lyl">
+								<p><img src="shangjia.png" alt="" style="width: 20px;height: auto;position: relative;top:5px;"/>&nbsp;&nbsp;&nbsp;附近商家</p>
+								<ul class="end-ul">
+								</ul>
+							</div>
+						</div>
+						<div class="neir" style="display: none;">222</div>
+						<div class="neir" style="display: none;">333</div>
+						<div class="neir" style="display: none;">444</div>
+					</div>
+				</div>
+				<div class="mui-off-canvas-backdrop"></div>
+			</div>
+		</div>
     <script src="js/mui.min.js"></script>
     <script src="js/zepto.js"></script>
     <link href="css/mui.min.css" rel="stylesheet"/>
     <script src="js/vconsole.min.js"></script>
-    <!--<script>
-    	var vConsole = new VConsole();
-    </script>-->
-    <script type="text/javascript" charset="utf-8">
-    
+    <script src="js/lyljs.js"></script>
+    <script type="text/javascript" charset="utf-8">   
       	mui.init();
       	mui('.mui-scroll-wrapper').scroll({
 				deceleration: 0.0005 //flick 减速系数，系数越大，滚动速度越慢，滚动距离越小，默认值0.0006
@@ -89,14 +88,6 @@
 					neir[this.index].style.display = "block";
 				});
 			}
-//    	$('h1').on('tap',function(){
-//    		
-//    console.log({data:111,type:2221})
-//    console.log(12138)
-//    	})
     </script>
-</head>
-<body>
-	
 </body>
 </html>
