--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="baidu-site-verification" content="xK17WBH1ym" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>疫情App-吴卓</title>
+    
     <!-- 引入swiper -->
     <style>
         *{
