--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             created(){
                 var self = this;
                 async function cre(){
-                   await self.getDataFn("data/getTimelineService",'homeData')
+//                    await self.getDataFn("data/getTimelineService",'homeData')
                    await self.getDataFn("data/getIndexRumorList",'bingduData')
                    await self.getDataFn("data/getIndexRecommendList",'fanghuData')
                    await self.getZhishiData()
