--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="baidu-site-verification" content="xK17WBH1ym" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="吴卓的个人网站">/*不推荐用这个*/
+    <meta name="keywords" content="吴卓的个人网站">
     <title>疫情App-吴卓</title>
     
     <!-- 引入swiper -->
