--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html lang=""><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>Webpack App</title><link href=css/about.b423da64.css rel=prefetch><link href=js/about.c0b6c251.js rel=prefetch><link href=css/app.d8e85e5a.css rel=preload as=style><link href=css/chunk-vendors.8f73fdb2.css rel=preload as=style><link href=js/app.fcdef37f.js rel=preload as=script><link href=js/chunk-vendors.893d1638.js rel=preload as=script><link href=css/chunk-vendors.8f73fdb2.css rel=stylesheet><link href=css/app.d8e85e5a.css rel=stylesheet></head><body><noscript><strong>We're sorry but Webpack App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.893d1638.js></script><script src=js/app.fcdef37f.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.f7fdfa98.js"></script>
+    <link rel="stylesheet" href="/assets/index.7a780254.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
+</html>
